Fixed hamburger menu so it works with higher z-index. After adding ten-x logo to background image it wasn't working

--- a/src/styling/hamburger.css
+++ b/src/styling/hamburger.css
@@ -8,6 +8,7 @@
   background-color: var(--homePage_reddish-color);
   border-radius: 5px;
   cursor: pointer;
+  z-index: 1;
 }
 
 #hamburger-icon #hidden-svg {
