--- a/src/styling/heroSearch.css
+++ b/src/styling/heroSearch.css
@@ -6,7 +6,7 @@
   left: 25%;
   background-color: white;
   border-radius: 5px;
-  z-index: 1;
+  z-index: 100;
   box-shadow: 1px 1px 30px black;
 }
 
